// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component :basic 1`] = `
<Button
  as="button"
  className="cl_n brw-btn"
  icon="Icon"
  props="for testing"
  size="mini"
  some="component"
/>
`;

exports[`Button component :with_children 1`] = `
<Button
  as="button"
  className="cl_n brw-btn"
  props="for testing"
  size="mini"
  some="component"
>
  <Icon
    as="i"
    name="Icon"
  />
  <div>
    Some Stuff
  </div>
</Button>
`;
